web/css/custom.css
@font-face {
	font-family: 'myriad-pro';
	font-weight: normal;
	src: url("../fonts/MyriadPro-Regular.otf") format("opentype");
	src: url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
	url('../fonts/MyriadPro-Regular.woff') format('woff'),
	url('../fonts/MyriadPro-Regular.ttf') format('truetype');
}
@font-face {
	font-family: 'myriad-pro-semi-bold';
	font-weight: lighter;
	src: url("../fonts/MyriadPro-Semibold.otf") format("opentype");
	src: url('../fonts/MyriadPro-Semibold.eot?#iefix') format('embedded-opentype'),
	url('../fonts/MyriadPro-Semibold.woff') format('woff'),
	url('../fonts/MyriadPro-Semibold.ttf') format('truetype');
}
@font-face {
	font-family: 'myriad-pro-bold';
	font-weight: normal;
	src: url("../fonts/MyriadPro-Bold.otf") format("opentype");
	src: url('../fonts/MyriadPro-Bold.eot?#iefix') format('embedded-opentype'),
	url('../fonts/MyriadPro-Bold.woff') format('woff'),
	url('../fonts/MyriadPro-Bold.ttf') format('truetype');
}
body {
	font-family: "myriad-pro", sans-serif;
	color:#4d5356;
}

h1, h2, h3, h4, h5, h6 {
	font-family: "myriad-pro", sans-serif;
	letter-spacing: 1px;
}

h2 {
	font-size: 19px;
	line-height: 22px;
}

h3 {
	font-size: 17px;
	line-height: 22px;
}

a, p {
	font-family: "myriad-pro", sans-serif;
	color: #4d5356;
}

a:hover {
	text-decoration: none;
	cursor:pointer;
}
.zoning {
	cursor: pointer;
}
dl {
	padding: 0.5em;
	margin-bottom: 0px !important;
}
dt {
	float: left;
	clear: left;
	width: 25px !important;
	text-align: right;
	font-weight: bold;
}
.block-bottom {
	clear:both;
}
.footer3-bg-color {
	background-color : #EC1625 !important ;
	font-family: "myriad-pro", sans-serif;
}
.footer2-bg-color {
	background-color : #697277 !important ;
	font-family: "myriad-pro", sans-serif;
}
.footer1-bg-color {
	background-color : #E1DFDF !important ;
	font-family: "myriad-pro", sans-serif;
}

.footer-bg-color {
	background-color : #ffffff !important ;
}
.dark-grey-title {
	color: #697277 !important;
}
.white-title {
	color: #ffffff !important;
}

.red-title {
	color: #EC1625 !important;
}
.devider-bg-color-dark {
	border-top: 1px solid #697277;
}

.dropdown-menu-padding-20{
	border-top: 1px solid #697277;
}

.dropdown-menu-padding-20{
	padding: 20px !important;
}

.navbar-background-color{
	background-color: #FFF !important;
}

.menu-background-color{
	background-color: #fff !important;
}

.cart-account-margin-top {
	margin-top: 5px;
}

.header-v4 .dropdown > a:after {
	content: "";
}

.header-v1-logo-padding {
	padding: 8px;
}

.navbar-mods:first-child {
	padding-left: 0!important;
}
.navbar-mods:last-child {
	padding-right: 0!important;
}
.header-v1 .navbar-default .navbar-nav > li > a,
.header-v1 .navbar-default .navbar-nav > li > a:hover,
.header-v1 .navbar-default .navbar-nav > li > a:focus {
	padding: 15px 0px 15px 0px!important;
	bottom: -1px;
	color: #697277;
}
.header-v1 .navbar-default .navbar-nav > li:hover > a,
.brd-active a {
	border-bottom: 2px solid #EC1625;
}
.header-v1 .dropdown > a:after {
	right:-28px;
	color:#EC1625;
	font-size: 18px;
	top: 14px;
}
.header-v1 .navbar-default .navbar-nav > li:hover > a {
	color:#697277;
}
/*Pour l'icone menu*/
.border-0 {
	border: 0px !important;
}

.font-size-20 {
	font-size: 20px;
}

/***************************************/
/*******        DOMAINES         *******/
/***************************************/

.padding-margin-0 { padding: 0px !important; margin: 0px !important;}

.margin-0 { margin:0;}

.padding-0{ padding-right: 0px !important; padding-left: 0px !important;}
.padding-10 { padding: 10px!important;}
.padding-15 { padding: 15px!important;}
.padding-80 {padding-left: 80px !important ;}

.margin-bottom-0 {margin-bottom: 0px!important;}
.margin-bottom-1 {margin-bottom: 1px!important;}
.margin-bottom-10 { margin-bottom: 10px!important;}
.margin-bottom-12 { margin-bottom: 12px!important;}
.margin-bottom-14 { margin-bottom: 14px!important;}
.margin-bottom-20{margin-bottom: 23px !important;}
.margin-bottom-30 { margin-bottom: 30px!important;}
.margin-bottom-45 {margin-bottom: 45px!important;}
.margin-bottom-65 {margin-bottom: 65px!important ;}
.margin-bottom-100 {margin-bottom: 100px!important;}

.margin-top-0  { margin-top:0px!important;}
.margin-top-2 {margin-top: 2px !important;}
.margin-top-5  { margin-top:5px!important;}
.margin-top-7  { margin-top:7px!important;}
.margin-top-8 { margin-top: 8px!important;}
.margin-top-10 { margin-top:10px!important;}
.margin-top-13 { margin-top:13px!important;}
.margin-top-15 { margin-top:15px!important;}
.margin-top-18 { margin-top:18px!important;}
.margin-top-20 { margin-top:20px!important;}
.margin-top-24 { margin-top:24px!important;}
.margin-top-25 { margin-top:25px!important;}
.margin-top-30 { margin-top:30px!important;}
.margin-top-33 { margin-top:33px !important ;}
.margin-top-35 { margin-top:35px!important;}
.margin-top-40 { margin-top:40px!important;}
.margin-top-41 {margin-top: 41px!important;}
.margin-top-45 { margin-top:45px!important;}
.margin-top-50 { margin-top:50px!important;}
.margin-top-55 { margin-top:55px!important;}
.margin-top-60 { margin-top:60px!important;}
.margin-top-65 { margin-top:65px!important;}
.margin-top-70 { margin-top:70px!important;}
.margin-top-80 { margin-top:80px!important;}
.margin-top-82 {margin-top: 82px!important;}
.margin-top-90 { margin-top:90px!important;}
.margin-top-100 { margin-top:100px!important;}
.margin-top-200 { margin-top:200px!important;}

.margin-right-0 { margin-right: 0px !important;}
.margin-right-2 {margin-right: 2px!important;}
.margin-right-3 {margin-right: 3px !important;}
.margin-right-5 { margin-right: 5px!important;}
.margin-right-6 { margin-right: 6px !important;}
.margin-right-10 { margin-right: 10px!important;}
.margin-right-15 { margin-right: 15px !important;}
.margin-right-20 { margin-right: 20px !important;}
.margin-right-50 { margin-right: 50px !important;}
.margin-right-70 { margin-right: 70px !important;}

.margin-left-0 { margin-left: 0px !important;}
/* ... */

